--- a/assign4/app/src/main/AndroidManifest.xml
+++ b/assign4/app/src/main/AndroidManifest.xml
@@ -13,11 +13,16 @@
         android:theme="@style/Theme.Assign4"
         tools:targetApi="31">
         <activity
+            android:name=".ShoppingCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AccountCreateActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
